--- a/ada/ada4/homework_ada4_tamura.ipynb
+++ b/ada/ada4/homework_ada4_tamura.ipynb
@@ -167,7 +167,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# データセット\n",
@@ -212,7 +214,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# cal phi\n",
@@ -226,7 +230,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# initialize W\n",
@@ -251,7 +257,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "theta = get_theta(Phi, W, train_y)"
@@ -312,6 +320,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
